--- a/package.json
+++ b/package.json
@@ -48,15 +48,10 @@
     "vue-eslint-parser": "mysticatea/vue-eslint-parser#v1.1.0-4"
   },
   "devDependencies": {
-    "codecov": "^2.1.0",
     "@types/node": "^4.2.6",
     "eslint": "^3.18.0",
-    "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-eslint-plugin": "^0.7.1",
-    "eslint-plugin-import": "^2.3.0",
     "mocha": "^3.2.0",
-    "nyc": "^10.2.0",
-    "opener": "^1.4.3",
-    "rimraf": "^2.6.1"
+    "nyc": "^10.2.0"
   }
 }
