Update rules update script

--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Official ESLint plugin for Vue.js",
   "main": "lib/index.js",
   "scripts": {
-    "start": "npm run test:simple -- --watch --growl",
+    "start": "npm run update && npm run test:simple -- --watch --growl",
     "test:base": "mocha tests --recursive",
     "test:simple": "npm run test:base -- --reporter nyan",
     "test": "nyc npm run test:base",
     "lint": "eslint .",
     "pretest": "npm run lint",
     "preversion": "npm test",
-    "postversion": "git push --follow-tags"
+    "postversion": "git push --follow-tags",
+    "update": "node ./tools/update-rules.js"
   },
   "files": [
     "lib"
