--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/node": "^4.2.6",
     "eslint": "^3.18.0",
     "eslint-plugin-eslint-plugin": "^0.7.1",
+    "eslint-plugin-vue-libs": "^1.2.0",
     "mocha": "^3.2.0",
     "nyc": "^10.2.0"
   }
