--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,20 @@
-module.exports = {
-  root: true,
-  parserOptions: {
-    ecmaVersion: 6,
+{
+  "root": true,
+  "parserOptions": {
+    "ecmaVersion": 6,
   },
-  env: {
-    node: true,
-    mocha: true,
+  "env": {
+    "node": true,
+    "mocha": true,
   },
   extends: [
     "plugin:eslint-plugin/recommended",
     "plugin:vue-libs/recommended",
   ],
-  plugins: [
+  "plugins": [
     "eslint-plugin",
   ],
-  rules: {
+  "rules": {
     "complexity": "off",
     "eslint-plugin/report-message-format": ["error", "^[A-Z].*\\.$"],
     "eslint-plugin/prefer-placeholders": "error",
