--- a/circle.yml
+++ b/circle.yml
@@ -5,9 +5,11 @@ machine:
 dependencies:
   pre:
     - nvm install 7
+    - nvm install 8
 
 test:
   override:
     - npm test
     - nvm use 6 && npm test
     - nvm use 7 && npm test
+    - nvm use 8 && npm test
