--- a/package.json
+++ b/package.json
@@ -45,14 +45,14 @@
   },
   "dependencies": {
     "requireindex": "^1.1.0",
-    "vue-eslint-parser": "^1.1.0-7"
+    "vue-eslint-parser": "../vue-eslint-parser/"
   },
   "devDependencies": {
-    "@types/node": "^4.2.6",
+    "@types/node": "^4.2.16",
     "babel-eslint": "^7.2.3",
     "chai": "^4.1.0",
     "eslint": "^3.18.0",
-    "eslint-plugin-eslint-plugin": "^0.7.1",
+    "eslint-plugin-eslint-plugin": "^0.7.4",
     "eslint-plugin-vue-libs": "^1.2.0",
     "mocha": "^3.2.0",
     "nyc": "^10.2.0"
