--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   },
   "dependencies": {
     "requireindex": "^1.1.0",
-    "vue-eslint-parser": "2.0.0-beta.0"
+    "vue-eslint-parser": "^2.0.0-beta.2"
   },
   "devDependencies": {
     "@types/node": "^4.2.16",
