--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint": "eslint .",
     "pretest": "npm run lint",
     "preversion": "npm run update && npm test",
-    "update": "node ./tools/update-rules.js",
-    "watch": "warun lib/rules/html-indent.js tests/lib/rules/html-indent.js -- nyc --reporter lcov -- mocha tests/lib/rules/html-indent.js"
+    "update": "node ./tools/update-rules.js"
   },
   "files": [
     "lib"
