--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "chai": "^4.1.0",
     "eslint": "^4.12.1",
     "eslint-plugin-eslint-plugin": "^0.8.0",
+    "eslint-plugin-html": "^4.0.1",
     "eslint-plugin-vue-libs": "^2.0.0",
     "mocha": "^3.2.0",
     "nyc": "^11.1.0"
