--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ dependencies:
 
 test:
   override:
-    - nvm use 4 && npm test
+    - nvm use 4 && npm i eslint@4.19.1 --no-save && npm test
     - nvm use 6 && npm test
     - nvm use 8 && npm test
     # Test for the minimum version we are supporting.
