--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "node": ">=4"
   },
   "peerDependencies": {
-    "eslint": "^3.18.0 || ^4.0.0"
+    "eslint": "^3.18.0 || ^4.0.0 || ^5.0.0"
   },
   "dependencies": {
     "vue-eslint-parser": "^2.0.3"
@@ -50,7 +50,7 @@
     "@types/node": "^4.2.16",
     "babel-eslint": "^8.2.2",
     "chai": "^4.1.0",
-    "eslint": "^4.14.0",
+    "eslint": "^5.0.0",
     "eslint-plugin-eslint-plugin": "^0.8.0",
     "eslint-plugin-html": "^4.0.1",
     "eslint-plugin-vue-libs": "^2.0.0",
