--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "version": "npm run lint -- --fix && git add .",
     "update": "node ./tools/update.js",
     "docs:watch": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:build": "vuepress build docs",
+    "docs:deploy": "./tools/deploy.sh"
   },
   "files": [
     "lib"
