--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,19 +2,19 @@ workflows:
   version: 2
   node-multi-build:
     jobs:
-      - node-v6
+      - node-v6:
           filters:
             branches:
               ignore: gh-pages
-      - node-v8
+      - node-v8:
           filters:
             branches:
               ignore: gh-pages
-      - node-v10
+      - node-v10:
           filters:
             branches:
               ignore: gh-pages
-      - node-v10-minimal
+      - node-v10-minimal:
           filters:
             branches:
               ignore: gh-pages
