--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint": "^5.0.0 || ^6.0.0"
   },
   "dependencies": {
+    "natural-compare": "^1.4.0",
     "vue-eslint-parser": "^6.0.5"
   },
   "devDependencies": {
