Revert vscode/settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,6 @@
     "eslint.validate": [
         "javascript",
         "javascriptreact",
-        "vue",
-    ],
-    "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": true
-    }
+        { "language": "vue", "autoFix": true }
+    ]
 }
