--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,4 +83,4 @@ jobs:
             - node_modules
       - run:
           name: Test
-          command: npm lint
+          command: npm run lint
