--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "version": "npm run lint -- --fix && git add .",
     "update": "node ./tools/update.js",
     "docs:watch": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
-    "tests": "mocha"
+    "docs:build": "vuepress build docs"
   },
   "files": [
     "lib"
