--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^7.2.0",
+    "@types/eslint-visitor-keys": "^1.0.0",
     "@types/natural-compare": "^1.4.0",
     "@types/node": "^13.13.5",
     "@types/semver": "^7.2.0",
@@ -79,7 +80,7 @@
     "mocha": "^7.1.2",
     "nyc": "^15.0.1",
     "prettier": "^2.1.1",
-    "typescript": "^3.9.5",
+    "typescript": "^4.3.4",
     "vue-eslint-editor": "^1.1.0",
     "vuepress": "^1.4.1"
   }
