--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
       - run:
           name: Install eslint@6
           command: |
-            npm install -D eslint@6.2.0
+            npm install -D eslint@6.2.0 @typescript-eslint/parser@3
       - run:
           name: Install dependencies
           command: npm install
