Add check for engines

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,5 +120,8 @@ jobs:
           paths:
             - node_modules
       - run:
-          name: Test
+          name: Lint
           command: npm run lint
+      - run:
+          name: Check
+          command: npm run valid
