--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ workflows:
       - node-v10
       - eslint-v7
       - eslint-v8
+      - ts-eslint-v4
       - node-v12
       - node-v14
       - lint
@@ -67,7 +68,7 @@ jobs:
       - run:
           name: Install eslint@7
           command: |
-            npm install --save-exact eslint@7
+            npm install eslint@7
       - run:
           name: Install dependencies
           command: npm install
@@ -85,7 +86,25 @@ jobs:
       - run:
           name: Install eslint@8
           command: |
-            npm install --save-exact eslint@^8.0.0-0
+            npm install eslint@^8.0.0-0
+      - run:
+          name: Install dependencies
+          command: npm install
+      - run:
+          name: Test
+          command: npm test
+  ts-eslint-v4:
+    docker:
+      - image: node:14
+    steps:
+      - run:
+          name: Versions
+          command: npm version
+      - checkout
+      - run:
+          name: Install @typescript-eslint/parser@4
+          command: |
+            npm install @typescript-eslint/parser@^4
       - run:
           name: Install dependencies
           command: npm install
