--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,19 +21,19 @@ jobs:
           name: Versions
           command: npm version
       - checkout
-      - restore_cache:
-          keys:
-            - v2-npm-lock-{{ .Branch }}-{{ .Environment.CIRCLE_JOB }}-{{ checksum "package.json" }}
+      # - restore_cache:
+      #     keys:
+      #       - v2-npm-lock-{{ .Branch }}-{{ .Environment.CIRCLE_JOB }}-{{ checksum "package.json" }}
       - run:
           name: Install dependencies
           command: npm install
       - run:
           name: Test
           command: npm test
-      - save_cache:
-          key: v2-npm-lock-{{ .Branch }}-{{ .Environment.CIRCLE_JOB }}-{{ checksum "package.json" }}
-          paths:
-            - node_modules
+      # - save_cache:
+      #     key: v2-npm-lock-{{ .Branch }}-{{ .Environment.CIRCLE_JOB }}-{{ checksum "package.json" }}
+      #     paths:
+      #       - node_modules
 
   node-v8:
     docker:
