--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "nth-check": "^2.0.1",
     "postcss-selector-parser": "^6.0.9",
     "semver": "^7.3.5",
-    "vue-eslint-parser": "^8.0.1"
+    "vue-eslint-parser": "^8.0.1",
+    "xml-name-validator": "^4.0.0"
   },
   "devDependencies": {
     "@types/eslint": "^7.28.1",
