--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint": "^6.2.0 || ^7.0.0 || ^8.0.0"
   },
   "dependencies": {
+    "@types/xml-name-validator": "^4.0.0",
     "eslint-utils": "^3.0.0",
     "natural-compare": "^1.4.0",
     "nth-check": "^2.0.1",
