--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@typescript-eslint/parser": "^5.23.0",
     "assert": "^2.0.0",
     "env-cmd": "^10.1.0",
+    "esbuild": "^0.15.15",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-eslint-plugin": "^3.5.3",
