--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "eslint-plugin-vue": "file:.",
     "espree": "^9.6.1",
     "events": "^3.3.0",
+    "jsdom": "^22.0.0",
     "markdownlint-cli": "^0.42.0",
     "mocha": "^10.7.3",
     "nyc": "^17.1.0",
