--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
     "editor.tabSize": 2,
-    "eslint.options": {
-        "rulePaths": ["eslint-internal-rules"]
-    },
+    "eslint.experimental.useFlatConfig": true,
     "eslint.validate": [
         "javascript",
         "javascriptreact",
