Enable Prettier in JavaScript files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,4 +14,8 @@
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
+    "[javascript]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
 }
