--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "xml-name-validator": "^4.0.0"
   },
   "devDependencies": {
-    "@ota-meshi/site-kit-eslint-editor-vue": "^0.1.0",
+    "@ota-meshi/site-kit-eslint-editor-vue": "^0.1.2",
     "@types/eslint": "^8.4.2",
     "@types/eslint-visitor-keys": "^1.0.0",
     "@types/natural-compare": "^1.4.1",
@@ -73,7 +73,7 @@
     "@typescript-eslint/parser": "^5.45.0",
     "assert": "^2.0.0",
     "env-cmd": "^10.1.0",
-    "esbuild": "^0.15.15",
+    "esbuild": "^0.18.17",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-eslint-plugin": "~5.1.1",
@@ -90,6 +90,6 @@
     "nyc": "^15.1.0",
     "prettier": "^3.0.0",
     "typescript": "^4.9.3",
-    "vitepress": "^1.0.0-alpha.29"
+    "vitepress": "^1.0.0-beta.6"
   }
 }
