--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -44,19 +44,14 @@ jobs:
 
   test-for-ts-eslint-v5:
     name: Test
-    strategy:
-      matrix:
-        node: [18]
-        os: [ubuntu-latest]
-
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v3
     - name: Install Node.js v${{ matrix.node }}
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node }}
+        node-version: 18
     - name: Install Packages
       run: npm install --legacy-peer-deps
     - name: Install typescript-eslint v5
