--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "prettier": "^3.0.0",
-    "typescript": "^5.1.6",
-    "vitepress": "^1.0.0-beta.6"
+    "typescript": "^5.3.2",
+    "vitepress": "^1.0.0-rc.31"
   }
 }
