--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2019",
-    "module": "commonjs",
+    "module": "node16",
     "moduleResolution": "Node16",
     "lib": ["es2020"],
     "allowJs": true,
@@ -23,5 +23,5 @@
     },
     "skipLibCheck": true
   },
-  "include": ["lib/**/*", "typings/eslint-plugin-vue/global.d.ts", "docs/.vitepress/**/*.ts"]
+  "include": ["lib/**/*", "typings/eslint-plugin-vue/global.d.ts", "docs/.vitepress/**/*.ts", "docs/.vitepress/**/*.mts"]
 }
