--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,7 +48,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-    - name: Install Node.js v${{ matrix.node }}
+    - name: Install Node.js
       uses: actions/setup-node@v3
       with:
         node-version: 18
@@ -56,5 +56,22 @@ jobs:
       run: npm install --legacy-peer-deps
     - name: Install typescript-eslint v5
       run: npm install -D @typescript-eslint/parser
+    - name: Test
+      run: npm test
+
+  test-for-eslint-v8-without-eslint-stylistic:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Install Node.js
+      uses: actions/setup-node@v3
+    - name: Install Packages
+      run: npm install --legacy-peer-deps
+    - name: Uninstall @stylistic/eslint-plugin
+      run: npm uninstall -D @stylistic/eslint-plugin
+    - name: Install eslint v8
+      run: npm install -D eslint@8
     - name: Test
       run: npm test
