--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,9 @@ jobs:
           command: npm version
       - checkout
       - run:
+          name: Uninstall @stylistic/eslint-plugin
+          command: npm uninstall -D @stylistic/eslint-plugin
+      - run:
           name: Install eslint@6
           command: |
             npm install --save-exact eslint@6.8.0 @typescript-eslint/parser@5
@@ -60,6 +63,9 @@ jobs:
           command: npm version
       - checkout
       - run:
+          name: Uninstall @stylistic/eslint-plugin
+          command: npm uninstall -D @stylistic/eslint-plugin
+      - run:
           name: Install eslint@7
           command: |
             npm install eslint@7 @typescript-eslint/parser@5
@@ -77,6 +83,9 @@ jobs:
           name: Versions
           command: npm version
       - checkout
+      - run:
+          name: Uninstall @stylistic/eslint-plugin
+          command: npm uninstall -D @stylistic/eslint-plugin
       - run:
           name: Install @typescript-eslint/parser@4 eslint@7 typescript@4.7
           command: |
