--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,15 @@
 {
-    "editor.tabSize": 2,
-    "eslint.experimental.useFlatConfig": true,
-    "eslint.validate": [
-        "javascript",
-        "javascriptreact",
-        "vue",
-        "json",
-        "jsonc"
-    ],
-    "typescript.tsdk": "./node_modules/typescript/lib",
-    "vetur.validation.script": false,
-    "[typescript]": {
-        "editor.formatOnSave": true,
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[javascript]": {
-        "editor.formatOnSave": true,
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
+  "editor.tabSize": 2,
+  "eslint.experimental.useFlatConfig": true,
+  "eslint.validate": ["javascript", "javascriptreact", "vue", "json", "jsonc"],
+  "typescript.tsdk": "./node_modules/typescript/lib",
+  "vetur.validation.script": false,
+  "[typescript]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[javascript]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
