Change Markdown emphasis style from asterisks to underscores
matches Prettier formatting

--- a/.markdownlint.yml
+++ b/.markdownlint.yml
@@ -15,7 +15,7 @@ code-block-style:
 code-fence-style:
   style: backtick
 emphasis-style:
-  style: asterisk
+  style: underscore
 heading-style:
   style: atx
 hr-style:
