--- a/package.json
+++ b/package.json
@@ -57,41 +57,41 @@
     "@eslint-community/eslint-utils": "^4.4.0",
     "natural-compare": "^1.4.0",
     "nth-check": "^2.1.1",
-    "postcss-selector-parser": "^6.0.13",
-    "semver": "^7.5.4",
+    "postcss-selector-parser": "^6.0.15",
+    "semver": "^7.6.0",
     "vue-eslint-parser": "^9.4.2",
     "xml-name-validator": "^4.0.0"
   },
   "devDependencies": {
     "@ota-meshi/site-kit-eslint-editor-vue": "^0.1.2",
-    "@stylistic/eslint-plugin": "^1.4.1",
-    "@types/eslint": "^8.44.1",
+    "@stylistic/eslint-plugin": "^1.6.1",
+    "@types/eslint": "^8.56.2",
     "@types/eslint-visitor-keys": "^3.3.0",
-    "@types/natural-compare": "^1.4.1",
-    "@types/node": "^14.18.54",
-    "@types/semver": "^7.5.0",
-    "@types/xml-name-validator": "^4.0.1",
-    "@typescript-eslint/parser": "^6.2.0",
-    "@typescript-eslint/types": "^6.2.0",
-    "assert": "^2.0.0",
+    "@types/natural-compare": "^1.4.3",
+    "@types/node": "^14.18.63",
+    "@types/semver": "^7.5.7",
+    "@types/xml-name-validator": "^4.0.3",
+    "@typescript-eslint/parser": "^7.0.1",
+    "@typescript-eslint/types": "^7.0.1",
+    "assert": "^2.1.0",
     "env-cmd": "^10.1.0",
-    "esbuild": "^0.18.17",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.9.0",
-    "eslint-plugin-eslint-plugin": "~5.1.1",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsonc": "^2.9.0",
-    "eslint-plugin-node-dependencies": ">=0.5.0 <1.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-unicorn": "^48.0.1",
+    "esbuild": "^0.20.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-eslint-plugin": "~5.3.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsonc": "^2.13.0",
+    "eslint-plugin-node-dependencies": "^0.11.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-unicorn": "^51.0.1",
     "eslint-plugin-vue": "file:.",
     "espree": "^9.6.1",
     "events": "^3.3.0",
-    "markdownlint-cli": "^0.35.0",
-    "mocha": "^10.2.0",
+    "markdownlint-cli": "^0.39.0",
+    "mocha": "^10.3.0",
     "nyc": "^15.1.0",
-    "prettier": "^3.0.0",
-    "typescript": "^5.3.2",
-    "vitepress": "^1.0.0-rc.31"
+    "prettier": "^3.2.5",
+    "typescript": "^5.3.3",
+    "vitepress": "^1.0.0-rc.42"
   }
 }
