--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "node": "^14.17.0 || >=16.0.0"
   },
   "peerDependencies": {
-    "eslint": "^6.2.0 || ^7.0.0 || ^8.0.0"
+    "eslint": "^6.2.0 || ^7.0.0 || ^8.0.0 || ^9.0.0"
   },
   "dependencies": {
     "@eslint-community/eslint-utils": "^4.4.0",
