--- a/package.json
+++ b/package.json
@@ -60,41 +60,41 @@
     "natural-compare": "^1.4.0",
     "nth-check": "^2.1.1",
     "postcss-selector-parser": "^6.0.15",
-    "semver": "^7.6.0",
+    "semver": "^7.6.3",
     "vue-eslint-parser": "^9.4.3",
     "xml-name-validator": "^4.0.0"
   },
   "devDependencies": {
-    "@ota-meshi/site-kit-eslint-editor-vue": "^0.2.0",
-    "@stylistic/eslint-plugin": "^2.2.2",
+    "@ota-meshi/site-kit-eslint-editor-vue": "^0.2.4",
+    "@stylistic/eslint-plugin": "^2.6.0",
     "@types/eslint": "^8.56.2",
     "@types/eslint-visitor-keys": "^3.3.0",
     "@types/natural-compare": "^1.4.3",
     "@types/node": "^14.18.63",
-    "@types/semver": "^7.5.7",
+    "@types/semver": "^7.5.8",
     "@types/xml-name-validator": "^4.0.3",
-    "@typescript-eslint/parser": "^7.13.1",
-    "@typescript-eslint/types": "^7.13.1",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@typescript-eslint/types": "^7.18.0",
     "assert": "^2.1.0",
     "env-cmd": "^10.1.0",
-    "esbuild": "^0.21.5",
-    "eslint": "^8.56.0",
+    "esbuild": "^0.23.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-eslint-plugin": "~6.1.0",
+    "eslint-plugin-eslint-plugin": "~6.2.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsonc": "^2.16.0",
     "eslint-plugin-node-dependencies": "^0.12.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-unicorn": "^54.0.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-unicorn": "^55.0.0",
     "eslint-plugin-vue": "file:.",
     "espree": "^9.6.1",
     "events": "^3.3.0",
     "markdownlint-cli": "^0.41.0",
-    "mocha": "^10.3.0",
+    "mocha": "^10.7.0",
     "nyc": "^17.0.0",
     "pathe": "^1.1.2",
-    "prettier": "^3.2.5",
-    "typescript": "^5.3.3",
-    "vitepress": "^1.0.0-rc.42"
+    "prettier": "^3.3.3",
+    "typescript": "^5.5.4",
+    "vitepress": "^1.3.1"
   }
 }
