Add TypeScript declarations for configs (#2528)

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "9.28.0",
   "description": "Official ESLint plugin for Vue.js",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "new": "node tools/new-rule.js",
     "start": "npm run test:base -- --watch --growl",
