--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   },
   "devDependencies": {
     "@ota-meshi/site-kit-eslint-editor-vue": "^0.2.4",
-    "@stylistic/eslint-plugin": "~2.10.0",
+    "@stylistic/eslint-plugin": "^2.12.0",
     "@types/eslint": "^8.56.2",
     "@types/eslint-visitor-keys": "^3.3.2",
     "@types/natural-compare": "^1.4.3",
