Run CI for pull requests on all branches

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,9 +1,13 @@
 name: CI
 on:
   push:
-    branches: [master]
+    branches:
+      - 'master'
   pull_request:
-    branches: [master]
+    types:
+      - 'opened'
+      - 'synchronize'
+      - 'reopened'
 
 permissions:
   contents: read
