--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,9 +1,13 @@
 name: CI
 on:
   push:
-    branches: [master]
+    branches:
+      - 'master'
   pull_request:
-    branches: [master]
+    types:
+      - 'opened'
+      - 'synchronize'
+      - 'reopened'
 
 permissions:
   contents: read
@@ -27,15 +31,13 @@ jobs:
     strategy:
       matrix:
         node: [18, 20]
-        os: [ubuntu-latest]
         eslint: [8, 9]
         include:
           # On old Node version
-          - eslint: 8
-            node: 17
-            os: ubuntu-latest
+          - node: 17
+            eslint: 8
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
